--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Ignore SBT project-specific cache directory
+target
+project/target
+project/project/target
+
+#Intellij
+*.iml
+.idea
+.bsp
